assets/0_initial_setup/manifests/01-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-gitops
  labels:
    name: openshift-gitops
    openshift.io/cluster-monitoring: "true"
