assets/0_initial_setup/manifests/11-gitlab-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gitlab-system
  labels:
    name: gitlab-system
    openshift.io/cluster-monitoring: "true"
