assets/0_initial_setup/manifests/18-gitlab-route.yaml
---
# OpenShift Route for GitLab Web UI
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gitlab
  namespace: gitlab-system
  labels:
    app: gitlab
    component: webservice
spec:
  host: ""  # Will be auto-generated by OpenShift
  to:
    kind: Service
    name: gitlab-webservice-default
    weight: 100
  port:
    targetPort: workhorse
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None

---
# OpenShift Route for GitLab Registry
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gitlab-registry
  namespace: gitlab-system
  labels:
    app: gitlab
    component: registry
spec:
  host: ""  # Will be auto-generated by OpenShift
  to:
    kind: Service
    name: gitlab-registry
    weight: 100
  port:
    targetPort: registry
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
